[metadata]
name = stone-grading
version = 0.0.1
author = Gradia Limited
author_email = dev@gradia.net
description = Diamond Stone Grading Package. It ships stone fields for reports and actual stones with their grades
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gradia-exchange/StoneGrading
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operation System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

